# podcast-insight

./: .env.example  .gitignore  Dockerfile  README.md  nixpacks.toml  pyproject.toml
mcp/: pyproject.toml  server.py
src/podcast_insight/: __init__.py  analyzer.py  cli.py  config.py  downloader.py  transcriber.py
web/: app.py  requirements.txt
web/static/: index.html
